--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[redirects]]
   from = "/*"
-  to = "http://qcw.yinxing.dynv6.net:8088//:splat"
+  to = "httpsss://qcw.yinxing.dynv6.net:8088//:splat"
   status = 200
   force = true
